- Ensure portrait mode images are centered # text-align: center is IE, margin: auto is standards-compliant # Fixes issue #21 # Thanks for reporting, Dax!

--- a/doc_root/layout.css
+++ b/doc_root/layout.css
@@ -168,6 +168,10 @@ img.singleshot_thumb {
 .image {
   text-align: center;
 }
+.image .display {
+  margin-left: auto;
+  margin-right: auto;
+}
 .viewport {
   width: 466px; 
   height: 236px;
